# better-django-tables

./: ACTION_COLUMN_UPDATE.md  NAVIGATION_TOKENS.md  README.md  RELEASE_NOTES.md  main.py  pyproject.toml
better_django_tables/: __init__.py  apps.py  conf.py  filters.py  forms.py  models.py  table_mixins.py  tables.py  urls.py  view_mixins.py  views.py
better_django_tables/docs/: action_column_mixin.md  per_page_mixin.md  render_row.md  structured_actions_guide.md
better_django_tables/examples/: action_column_examples.py  per_page_mixin_usage.py
better_django_tables/migrations/: 0001_initial.py  0002_alter_report_allowed_groups.py  0003_alter_report_created_by_alter_reportfavorite_user.py
better_django_tables/static/better_django_tables/js/: better_django_tables.js  bulk_actions.js
better_django_tables/templates/better_django_tables/: table.html
better_django_tables/templates/better_django_tables/examples/: action_column_demo.html  render_row_usage.html
better_django_tables/templates/better_django_tables/filters/: active_filter_badges.html  searchbar_filter.html  sidebar_filter.html
better_django_tables/templates/better_django_tables/partials/: actions_column.html  bulk_actions.html  delete_modal.html  edit_button.html  (+6 more)
better_django_tables/templatetags/: action_tags.py  better_django_tables.py  delete_modal.py  table_tags.py
better_django_tables/tests/: test_action_column_mixin.py  test_active_filter_mixin.py  test_bulk_action_view_mixin.py  test_per_page_mixin.py
docs/: SAVE_AND_NEXT.md  enhanced_links.md
examples/: enhanced_links_usage.py
(+8 files in other folders)
